# PlayerSFX.gd

extends Node

# Ø±Ø¨Ø· Ø¹Ù‚Ø¯ Ø§Ù„ØµÙˆØª
@onready var jump_sound = $JumpSound
@onready var dodge_sound = $DodgeSound
@onready var attack_sound_1 = $AttackSound1 # ØµÙˆØª Ø§Ù„Ù‡Ø¬ÙˆÙ… 1
@onready var attack_sound_2 = $AttackSound2 # ØµÙˆØª Ø§Ù„Ù‡Ø¬ÙˆÙ… 2
@onready var hurt_sound = $HurtSound

# ------------------------------------
# Ø¯ÙˆØ§Ù„ ØªØ´ØºÙŠÙ„ Ø§Ù„Ø£ØµÙˆØ§Øª
# ------------------------------------

func play_jump():
	if jump_sound: jump_sound.play()

func play_dodge():
	if dodge_sound: dodge_sound.play()

func play_hurt():
	if hurt_sound: hurt_sound.play()

func play_attack(attack_number: int):
	match attack_number:
		1:
			if attack_sound_1: attack_sound_1.play()
		2:
			if attack_sound_2: attack_sound_2.play()
		_:
			pass

# ğŸ›‘ Ø§Ù„Ø¯Ø§Ù„Ø© Ø§Ù„Ø¬Ø¯ÙŠØ¯Ø©: Ø¥Ø¹Ø§Ø¯Ø© Ø¶Ø¨Ø· Ù…Ø³ØªÙˆÙ‰ Ø§Ù„ØµÙˆØª Ø¨Ø¹Ø¯ ØªØ¨Ø¯ÙŠÙ„ Ø§Ù„ÙƒØ§Ù…ÙŠØ±Ø§
func reset_volume():
	# Ø§Ù„ØªØ£ÙƒØ¯ Ù…Ù† Ø£Ù† Ø¬Ù…ÙŠØ¹ Ø§Ù„Ø£ØµÙˆØ§Øª Ù…Ø¶Ø¨ÙˆØ·Ø© Ø¹Ù„Ù‰ 0 dB (Ø§Ù„Ù…Ø³ØªÙˆÙ‰ Ø§Ù„Ø§ÙØªØ±Ø§Ø¶ÙŠ)
	if jump_sound: jump_sound.volume_db = 0.0
	if dodge_sound: dodge_sound.volume_db = 0.0
	if attack_sound_1: attack_sound_1.volume_db = 0.0
	if attack_sound_2: attack_sound_2.volume_db = 0.0
	if hurt_sound: hurt_sound.volume_db = 0.0
	print("DEBUG: ØªÙ… Ø¥Ø¹Ø§Ø¯Ø© Ø¶Ø¨Ø· Ù…Ø³ØªÙˆÙ‰ ØµÙˆØª Ø§Ù„Ù„Ø§Ø¹Ø¨ Ø¥Ù„Ù‰ 0 dB.")
